WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58056
REGRESSION(WebKit2): execCommand('undo') doesn't work (Windows)
https://bugs.webkit.org/show_bug.cgi?id=58056
Summary
REGRESSION(WebKit2): execCommand('undo') doesn't work (Windows)
Enrica Casucci
Reported
2011-04-07 10:04:00 PDT
Undo does not seem to work via execCommand in WebKit2 windows. Steps to reproduce: 1) Load exec-command-undo.html tests Results: Text is bold because the undo failed.
Attachments
Patch
(4.56 KB, patch)
2011-04-07 15:04 PDT
,
Enrica Casucci
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2011-04-07 10:04:17 PDT
<
rdar://problem/8862023
>
Enrica Casucci
Comment 2
2011-04-07 15:04:54 PDT
Created
attachment 88711
[details]
Patch
Jessie Berlin
Comment 3
2011-04-07 16:08:03 PDT
Comment on
attachment 88711
[details]
Patch I am not yet a reviewer, but unofficial r=me!
Enrica Casucci
Comment 4
2011-04-07 16:49:54 PDT
http://trac.webkit.org/changeset/83194
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug