REGRESSION(WebKit2): execCommand('undo') doesn't work (Windows). https://bugs.webkit.org/show_bug.cgi?id=58056 <rdar://problem/8862023>

Reviewed by Oliver Hunt.

Adding support for execCommand('undo') and execCommand('redo')
in WebKit2 for Windows.

* UIProcess/API/C/win/WKView.h:
* UIProcess/win/WebUndoClient.cpp:
(WebKit::WebUndoClient::canUndoRedo):
(WebKit::WebUndoClient::executeUndoRedo):
* UIProcess/win/WebUndoClient.h:
* UIProcess/win/WebView.cpp:
(WebKit::WebView::canUndoRedo):
(WebKit::WebView::executeUndoRedo):



Canonical link: https://commits.webkit.org/73008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83229 268f45cc-cd09-0410-ab3c-d52691b4dbfc